# checker_rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmark.rs
cli/: Cargo.toml
cli/src/: main.rs
lib/checkers_core/: Cargo.toml
lib/checkers_core/src/: board.rs  lib.rs
logic/: Cargo.toml
logic/src/: board.rs  game.rs  lib.rs  piece.rs  util.rs
logic/src/player/: eval.rs  human.rs  minimax.rs  mod.rs
src/: game.rs  lib.rs  main.rs  util.rs
src/core/: board.rs
src/logic/: board.rs  game.rs  mod.rs
src/logic/player/: eval.rs  human.rs  minimax.rs  mod.rs
src/player/: alpha_beta_player.rs  alpha_zero_player.rs  bot_player.rs  human_player.rs  minimax_player.rs  mod.rs  monte_carlo_player.rs
