[package]
name = "r_checkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[dependencies]
checkers_core = { path = "lib/checkers_core" }

[[bench]]
name = "benchmark"
harness = false